new Integer -> Integer.valueOf , etc. applying a patch from David